@startuml

title __JAVA's Class Diagram__\n

  package  {
    class Director {
        + directorName : String
        + directorLastName : String
        + Director()
        + equals()
        + hashCode()
        + toString()
    }
  }
  

  package  {
    class Excel {
        {static} ~ EXCEL_FILE_PATH : String
        + read()
        - getRowsValues()
        - findDirectorLastName()
        - getCellsValues()
        + write()
        - addColumnTitles()
        - addFilmEntries()
        - adjustColumnWidth()
    }
  }
  

  package  {
    class Film {
        + year : int
        + filmName : String
        + Film()
        + getObjectArrayFromFilmFields()
        + toString()
    }
  }
  

  package  {
    class Json {
        {static} ~ JSON_FILE_PATH : String
        + write()
        + read()
    }
  }
  

  package  {
    class ListOperations {
        + extractDirectorsFromList()
        + printMostPopularDirector()
        - fillDirectorsWithNumberOfOscars()
        - returnMaxNumberOfOscars()
        - returnDirectorsWithSpecificValueOfOscars()
    }
  }
  

  package  {
    class Main {
        {static} + main()
        {static} ~ findMostPopularDirectors()
        {static} ~ writeToFile()
        {static} ~ readFromFile()
    }
  }
  

  package  {
    interface Readable {
        {abstract} + read()
    }
  }
  

  package  {
    class UrlReader {
        ~ url : String
        {static} + YEAR_OF_FIRST_FILM_PRODUCTION : int
        + UrlReader()
        + getFilmsList()
        - returnDirectorString()
        - hasMoreThanOneLastName()
        - removeAsterisk()
    }
  }
  

  package  {
    interface Writeable {
        {abstract} + write()
    }
  }
  

  Excel -up-|> Readable
  Excel -up-|> Writeable
  Film o-- Director : director
  Json -up-|> Writeable
  Json -up-|> Readable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
